--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "aurelia-templating-resources": "^1.0.0"
   },
   "devDependencies": {
-    "aurelia-tools": "^0.2.1",
-    "babel-dts-generator": "^0.5.1",
-    "babel-eslint": "^4.1.1",
+    "aurelia-tools": "^1.0.0",
+    "babel-dts-generator": "^0.6.3",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
@@ -82,47 +82,48 @@
     "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-es2015-loose-native-modules": "^1.0.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^5.8.20",
-    "browser-sync": "2.11.2",
-    "conventional-changelog": "^0.5.3",
-    "del": "^1.1.0",
+    "babel-runtime": "^6.23.0",
+    "browser-sync": "2.18.12",
+    "conventional-changelog": "^1.1.3",
+    "del": "^3.0.0",
     "glob": "^7.0.0",
     "gulp": "^3.8.10",
     "gulp-babel": "^6.1.2",
-    "gulp-bump": "^0.3.1",
+    "gulp-bump": "^2.7.0",
     "gulp-concat": "^2.6.0",
-    "gulp-conventional-changelog": "^0.7.0",
-    "gulp-eslint": "^1.0.0",
+    "gulp-conventional-changelog": "^1.1.3",
+    "gulp-eslint": "^4.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
-    "gulp-typedoc": "^1.2.1",
+    "gulp-typedoc": "^2.0.2",
     "gulp-typedoc-extractor": "0.0.8",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^3.1.7",
     "jasmine-core": "^2.1.3",
-    "jspm": "0.16.15",
-    "jspm-git": "^0.4.2",
-    "karma": "^0.13.15",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.2.3",
+    "jspm": "0.16.53",
+    "jspm-git": "^0.6.0",
+    "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^5.2.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
     "karma-jspm": "^2.0.2",
     "merge2": "^1.0.2",
     "mkpath": "^1.0.0",
-    "object.assign": "^1.0.3",
-    "phantomjs-polyfill": "0.0.1",
+    "object.assign": "^4.0.4",
+    "phantomjs-polyfill": "0.0.2",
     "request": "^2.69.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
-    "typescript": "^1.9.0-dev.20160613-1.0",
-    "vinyl": "^1.1.0",
-    "vinyl-paths": "^1.0.0",
+    "typedoc": "^0.7.1",
+    "typescript": "^2.4.1",
+    "vinyl": "^2.0.2",
+    "vinyl-paths": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
-    "yargs": "^2.1.1"
+    "yargs": "^8.0.2"
   },
   "aurelia": {
     "usedBy": [],
