--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-plugin-transform-es2015-modules-systemjs": "^6.11.6",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-es2015-loose-native-modules": "^1.0.0",
