--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "aurelia-binding": "npm:aurelia-binding@^1.0.4",
+      "aurelia-binding": "npm:aurelia-binding@2.1.1",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
@@ -61,7 +61,7 @@
     }
   },
   "dependencies": {
-    "aurelia-binding": "^1.0.4",
+    "aurelia-binding": "^2.1.1",
     "aurelia-dependency-injection": "^1.0.0",
     "aurelia-logging": "^1.0.0",
     "aurelia-metadata": "^1.0.0",
@@ -147,14 +147,14 @@
         "aurelia-kendoui-bridge/button/button",
         "aurelia-kendoui-bridge/buttongroup/buttongroup",
         "aurelia-kendoui-bridge/calendar/calendar",
-		"aurelia-kendoui-bridge/chat/chat",
+        "aurelia-kendoui-bridge/chat/chat",
         "aurelia-kendoui-bridge/colorpicker/colorpicker",
         "aurelia-kendoui-bridge/colorpalette/colorpalette",
         "aurelia-kendoui-bridge/combobox/combobox",
         "aurelia-kendoui-bridge/contextmenu/contextmenu",
         "aurelia-kendoui-bridge/dialog/dialog",
         "aurelia-kendoui-bridge/dropdownlist/dropdownlist",
-		"aurelia-kendoui-bridge/dropdowntree/dropdowntree",
+        "aurelia-kendoui-bridge/dropdowntree/dropdowntree",
         "aurelia-kendoui-bridge/datetimepicker/datetimepicker",
         "aurelia-kendoui-bridge/datepicker/datepicker",
         "aurelia-kendoui-bridge/draggable/draggable",
@@ -168,7 +168,7 @@
         "aurelia-kendoui-bridge/notification/notification",
         "aurelia-kendoui-bridge/notification/notification-template",
         "aurelia-kendoui-bridge/numerictextbox/numerictextbox",
-		"aurelia-kendoui-bridge/pager/pager",
+        "aurelia-kendoui-bridge/pager/pager",
         "aurelia-kendoui-bridge/panelbar/panelbar",
         "aurelia-kendoui-bridge/popup/popup",
         "aurelia-kendoui-bridge/progressbar/progressbar",
