--- a/sample/package.json
+++ b/sample/package.json
@@ -2,7 +2,7 @@
   "jspm": {
     "dependencies": {
       "aurelia-after-attached-plugin": "github:aurelia-ui-toolkits/aurelia-after-attached-plugin@^0.1.0",
-      "aurelia-binding": "npm:aurelia-binding@2.1.1",
+      "aurelia-binding": "npm:aurelia-binding@^2.1.1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1",
