--- a/sample/package.json
+++ b/sample/package.json
@@ -21,7 +21,7 @@
       "css": "github:systemjs/plugin-css@^0.1.23",
       "font-awesome": "npm:font-awesome@4.6.3",
       "gka/chroma.js": "github:gka/chroma.js@^1.1.1",
-      "google/code-prettify": "github:google/code-prettify@master",
+      "google/code-prettify": "github:googlearchive/code-prettify@master",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "prism": "github:PrismJS/prism@1.3.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
@@ -46,7 +46,7 @@
     "babel-eslint": "^4.1.1",
     "graceful-fs": "^4.2.3",
     "gulp": "^4.0.0",
-    "jspm": "0.16.50"
+    "jspm": "0.16.55"
   },
   "dependencies": {
     "aurelia-binding": "^2.1.1"
